Translations by sabbamitta to translation/de/sabbamitta/sutta/mn/mn113_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/mn/mn113_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/mn/mn113_translation-de-sabbamitta.json
@@ -58,5 +58,6 @@
   "mn113:8.9": "gebührt ihm, wenn er im Einklang mit der Lehre übt, wenn er übt, indem er diesem Vorgehen richtig folgt, und wenn er im Einklang mit dieser Lehre lebt, dafür Ehre und Lob.‘ ",
   "mn113:8.10": "Und indem er die Übung für sich behält, verherrlicht er sich wegen seines materiellen Besitzes nicht selbst oder setzt andere herab. ",
   "mn113:8.11": "Auch das ist eine Eigenschaft eines wahren Menschen. ",
-  "mn113:9.1": "Weiterhin ist da ein unwahrer Mensch sehr gelehrt … "
+  "mn113:9.1": "Weiterhin ist da ein unwahrer Mensch sehr gelehrt … ",
+  "mn113:10.1": "ein Kenner des Ordensrechts … "
 }
