Translations by sabbamitta to translation/de/sabbamitta/sutta/mn/mn113_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/mn/mn113_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/mn/mn113_translation-de-sabbamitta.json
@@ -60,5 +60,6 @@
   "mn113:8.11": "Auch das ist eine Eigenschaft eines wahren Menschen. ",
   "mn113:9.1": "Weiterhin ist da ein unwahrer Mensch sehr gelehrt … ",
   "mn113:10.1": "ein Kenner des Ordensrechts … ",
-  "mn113:11.1": "ein Dhammalehrer … "
+  "mn113:11.1": "ein Dhammalehrer … ",
+  "mn113:12.1": "einer, der in der Wildnis lebt … "
 }
