Translations by sabbamitta to translation/de/sabbamitta/sutta/mn/mn113_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/mn/mn113_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/mn/mn113_translation-de-sabbamitta.json
@@ -61,5 +61,6 @@
   "mn113:9.1": "Weiterhin ist da ein unwahrer Mensch sehr gelehrt … ",
   "mn113:10.1": "ein Kenner des Ordensrechts … ",
   "mn113:11.1": "ein Dhammalehrer … ",
-  "mn113:12.1": "einer, der in der Wildnis lebt … "
+  "mn113:12.1": "einer, der in der Wildnis lebt … ",
+  "mn113:13.1": "einer, der Fetzenroben trägt … "
 }
