--- a/translation/de/sabbamitta/sutta/mn/mn113_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/mn/mn113_translation-de-sabbamitta.json
@@ -62,5 +62,6 @@
   "mn113:10.1": "ein Kenner des Ordensrechts … ",
   "mn113:11.1": "ein Dhammalehrer … ",
   "mn113:12.1": "einer, der in der Wildnis lebt … ",
-  "mn113:13.1": "einer, der Fetzenroben trägt … "
+  "mn113:13.1": "einer, der Fetzenroben trägt … ",
+  "mn113:14.1": "einer, der nur Almosen isst … "
 }
