--- a/translation/de/sabbamitta/sutta/mn/mn113_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/mn/mn113_translation-de-sabbamitta.json
@@ -63,5 +63,6 @@
   "mn113:11.1": "ein Dhammalehrer … ",
   "mn113:12.1": "einer, der in der Wildnis lebt … ",
   "mn113:13.1": "einer, der Fetzenroben trägt … ",
-  "mn113:14.1": "einer, der nur Almosen isst … "
+  "mn113:14.1": "einer, der nur Almosen isst … ",
+  "mn113:15.1": "einer, der am Fuß eines Baumes lebt … "
 }
