Translations by sabbamitta to translation/de/sabbamitta/sutta/mn/mn113_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/mn/mn113_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/mn/mn113_translation-de-sabbamitta.json
@@ -64,5 +64,6 @@
   "mn113:12.1": "einer, der in der Wildnis lebt … ",
   "mn113:13.1": "einer, der Fetzenroben trägt … ",
   "mn113:14.1": "einer, der nur Almosen isst … ",
-  "mn113:15.1": "einer, der am Fuß eines Baumes lebt … "
+  "mn113:15.1": "einer, der am Fuß eines Baumes lebt … ",
+  "mn113:16-20.1": "einer, der auf einem Leichenfeld lebt … "
 }
