--- a/translation/de/sabbamitta/sutta/mn/mn113_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/mn/mn113_translation-de-sabbamitta.json
@@ -65,5 +65,6 @@
   "mn113:13.1": "einer, der Fetzenroben trägt … ",
   "mn113:14.1": "einer, der nur Almosen isst … ",
   "mn113:15.1": "einer, der am Fuß eines Baumes lebt … ",
-  "mn113:16-20.1": "einer, der auf einem Leichenfeld lebt … "
+  "mn113:16-20.1": "einer, der auf einem Leichenfeld lebt … ",
+  "mn113:16-20.2": "einer, der unter freiem Himmel lebt … "
 }
