--- a/translation/de/sabbamitta/sutta/mn/mn113_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/mn/mn113_translation-de-sabbamitta.json
@@ -66,5 +66,6 @@
   "mn113:14.1": "einer, der nur Almosen isst … ",
   "mn113:15.1": "einer, der am Fuß eines Baumes lebt … ",
   "mn113:16-20.1": "einer, der auf einem Leichenfeld lebt … ",
-  "mn113:16-20.2": "einer, der unter freiem Himmel lebt … "
+  "mn113:16-20.2": "einer, der unter freiem Himmel lebt … ",
+  "mn113:16-20.3": "einer, der sich nie hinlegt … "
 }
