--- a/translation/de/sabbamitta/sutta/mn/mn113_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/mn/mn113_translation-de-sabbamitta.json
@@ -67,5 +67,6 @@
   "mn113:15.1": "einer, der am Fuß eines Baumes lebt … ",
   "mn113:16-20.1": "einer, der auf einem Leichenfeld lebt … ",
   "mn113:16-20.2": "einer, der unter freiem Himmel lebt … ",
-  "mn113:16-20.3": "einer, der sich nie hinlegt … "
+  "mn113:16-20.3": "einer, der sich nie hinlegt … ",
+  "mn113:16-20.4": "einer, der da schläft, wo er seine Matte hinlegt … "
 }
