--- a/translation/de/sabbamitta/sutta/mn/mn113_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/mn/mn113_translation-de-sabbamitta.json
@@ -72,5 +72,6 @@
   "mn113:16-20.5": "einer, der nur einmal am Tag isst. ",
   "mn113:16-20.6": "Er denkt: ",
   "mn113:16-20.7": "‚Ich esse nur einmal am Tag, nicht wie diese anderen Mönche und Nonnen.‘ ",
-  "mn113:16-20.8": "Und er verherrlicht sich deshalb selbst und setzt andere herab. "
+  "mn113:16-20.8": "Und er verherrlicht sich deshalb selbst und setzt andere herab. ",
+  "mn113:16-20.9": "Auch das ist eine Eigenschaft eines unwahren Menschen. "
 }
