Translations by sabbamitta to translation/de/sabbamitta/sutta/mn/mn113_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/mn/mn113_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/mn/mn113_translation-de-sabbamitta.json
@@ -74,5 +74,6 @@
   "mn113:16-20.7": "‚Ich esse nur einmal am Tag, nicht wie diese anderen Mönche und Nonnen.‘ ",
   "mn113:16-20.8": "Und er verherrlicht sich deshalb selbst und setzt andere herab. ",
   "mn113:16-20.9": "Auch das ist eine Eigenschaft eines unwahren Menschen. ",
-  "mn113:16-20.10": "Ein wahrer Mensch denkt: "
+  "mn113:16-20.10": "Ein wahrer Mensch denkt: ",
+  "mn113:16-20.11": "‚Nicht weil man nur einmal am Tag isst, gehen Gedanken voller Gier, Hass und Täuschung zu Ende. "
 }
