Translations by sabbamitta to translation/de/sabbamitta/sutta/mn/mn113_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/mn/mn113_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/mn/mn113_translation-de-sabbamitta.json
@@ -75,5 +75,6 @@
   "mn113:16-20.8": "Und er verherrlicht sich deshalb selbst und setzt andere herab. ",
   "mn113:16-20.9": "Auch das ist eine Eigenschaft eines unwahren Menschen. ",
   "mn113:16-20.10": "Ein wahrer Mensch denkt: ",
-  "mn113:16-20.11": "‚Nicht weil man nur einmal am Tag isst, gehen Gedanken voller Gier, Hass und Täuschung zu Ende. "
+  "mn113:16-20.11": "‚Nicht weil man nur einmal am Tag isst, gehen Gedanken voller Gier, Hass und Täuschung zu Ende. ",
+  "mn113:16-20.12": "Selbst wenn jemand mehr als einmal am Tag isst, "
 }
