Translations by sabbamitta to translation/de/sabbamitta/sutta/mn/mn113_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/mn/mn113_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/mn/mn113_translation-de-sabbamitta.json
@@ -77,5 +77,6 @@
   "mn113:16-20.10": "Ein wahrer Mensch denkt: ",
   "mn113:16-20.11": "‚Nicht weil man nur einmal am Tag isst, gehen Gedanken voller Gier, Hass und Täuschung zu Ende. ",
   "mn113:16-20.12": "Selbst wenn jemand mehr als einmal am Tag isst, ",
-  "mn113:16-20.13": "gebührt ihm, wenn er im Einklang mit der Lehre übt, wenn er übt, indem er diesem Vorgehen richtig folgt, und wenn er im Einklang mit dieser Lehre lebt, dafür Ehre und Lob.‘ "
+  "mn113:16-20.13": "gebührt ihm, wenn er im Einklang mit der Lehre übt, wenn er übt, indem er diesem Vorgehen richtig folgt, und wenn er im Einklang mit dieser Lehre lebt, dafür Ehre und Lob.‘ ",
+  "mn113:16-20.14": "Und indem er die Übung für sich behält, verherrlicht er sich nicht selbst oder setzt andere herab, weil er nur einmal am Tag isst. "
 }
