--- a/translation/de/sabbamitta/sutta/mn/mn113_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/mn/mn113_translation-de-sabbamitta.json
@@ -80,5 +80,6 @@
   "mn113:16-20.13": "gebührt ihm, wenn er im Einklang mit der Lehre übt, wenn er übt, indem er diesem Vorgehen richtig folgt, und wenn er im Einklang mit dieser Lehre lebt, dafür Ehre und Lob.‘ ",
   "mn113:16-20.14": "Und indem er die Übung für sich behält, verherrlicht er sich nicht selbst oder setzt andere herab, weil er nur einmal am Tag isst. ",
   "mn113:16-20.15": "Auch das ist eine Eigenschaft eines wahren Menschen. ",
-  "mn113:21.1": "Weiterhin tritt da ein unwahrer Mensch, ganz abgeschieden von den Sinnenfreuden, abgeschieden von untauglichen Eigenschaften, in die erste Vertiefung ein und verweilt darin; da gibt es aus Abgeschiedenheit geborene Ekstase und Seligkeit, während man den Geist ausrichtet und hält. "
+  "mn113:21.1": "Weiterhin tritt da ein unwahrer Mensch, ganz abgeschieden von den Sinnenfreuden, abgeschieden von untauglichen Eigenschaften, in die erste Vertiefung ein und verweilt darin; da gibt es aus Abgeschiedenheit geborene Ekstase und Seligkeit, während man den Geist ausrichtet und hält. ",
+  "mn113:21.2": "Er denkt: "
 }
