Translations by sabbamitta to translation/de/sabbamitta/sutta/mn/mn113_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/mn/mn113_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/mn/mn113_translation-de-sabbamitta.json
@@ -81,5 +81,6 @@
   "mn113:16-20.14": "Und indem er die Übung für sich behält, verherrlicht er sich nicht selbst oder setzt andere herab, weil er nur einmal am Tag isst. ",
   "mn113:16-20.15": "Auch das ist eine Eigenschaft eines wahren Menschen. ",
   "mn113:21.1": "Weiterhin tritt da ein unwahrer Mensch, ganz abgeschieden von den Sinnenfreuden, abgeschieden von untauglichen Eigenschaften, in die erste Vertiefung ein und verweilt darin; da gibt es aus Abgeschiedenheit geborene Ekstase und Seligkeit, während man den Geist ausrichtet und hält. ",
-  "mn113:21.2": "Er denkt: "
+  "mn113:21.2": "Er denkt: ",
+  "mn113:21.3": "‚Ich habe die erste Vertiefung erreicht, nicht wie diese anderen Mönche und Nonnen.‘ "
 }
