--- a/translation/de/sabbamitta/sutta/mn/mn113_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/mn/mn113_translation-de-sabbamitta.json
@@ -83,5 +83,6 @@
   "mn113:21.1": "Weiterhin tritt da ein unwahrer Mensch, ganz abgeschieden von den Sinnenfreuden, abgeschieden von untauglichen Eigenschaften, in die erste Vertiefung ein und verweilt darin; da gibt es aus Abgeschiedenheit geborene Ekstase und Seligkeit, während man den Geist ausrichtet und hält. ",
   "mn113:21.2": "Er denkt: ",
   "mn113:21.3": "‚Ich habe die erste Vertiefung erreicht, nicht wie diese anderen Mönche und Nonnen.‘ ",
-  "mn113:21.4": "Und er verherrlicht sich deshalb selbst und setzt andere herab. "
+  "mn113:21.4": "Und er verherrlicht sich deshalb selbst und setzt andere herab. ",
+  "mn113:21.5": "Auch das ist eine Eigenschaft eines unwahren Menschen. "
 }
