Translations by sabbamitta to translation/de/sabbamitta/sutta/mn/mn113_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/mn/mn113_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/mn/mn113_translation-de-sabbamitta.json
@@ -84,5 +84,6 @@
   "mn113:21.2": "Er denkt: ",
   "mn113:21.3": "‚Ich habe die erste Vertiefung erreicht, nicht wie diese anderen Mönche und Nonnen.‘ ",
   "mn113:21.4": "Und er verherrlicht sich deshalb selbst und setzt andere herab. ",
-  "mn113:21.5": "Auch das ist eine Eigenschaft eines unwahren Menschen. "
+  "mn113:21.5": "Auch das ist eine Eigenschaft eines unwahren Menschen. ",
+  "mn113:21.6": "Ein wahrer Mensch denkt: "
 }
