Translations by sabbamitta to translation/de/sabbamitta/sutta/mn/mn113_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/mn/mn113_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/mn/mn113_translation-de-sabbamitta.json
@@ -85,5 +85,6 @@
   "mn113:21.3": "‚Ich habe die erste Vertiefung erreicht, nicht wie diese anderen Mönche und Nonnen.‘ ",
   "mn113:21.4": "Und er verherrlicht sich deshalb selbst und setzt andere herab. ",
   "mn113:21.5": "Auch das ist eine Eigenschaft eines unwahren Menschen. ",
-  "mn113:21.6": "Ein wahrer Mensch denkt: "
+  "mn113:21.6": "Ein wahrer Mensch denkt: ",
+  "mn113:21.7": "‚Der Buddha hat davon gesprochen, dass man selbst vom Erreichen der ersten Vertiefung nicht geprägt ist. "
 }
