--- a/translation/de/sabbamitta/sutta/mn/mn113_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/mn/mn113_translation-de-sabbamitta.json
@@ -86,5 +86,6 @@
   "mn113:21.4": "Und er verherrlicht sich deshalb selbst und setzt andere herab. ",
   "mn113:21.5": "Auch das ist eine Eigenschaft eines unwahren Menschen. ",
   "mn113:21.6": "Ein wahrer Mensch denkt: ",
-  "mn113:21.7": "‚Der Buddha hat davon gesprochen, dass man selbst vom Erreichen der ersten Vertiefung nicht geprägt ist. "
+  "mn113:21.7": "‚Der Buddha hat davon gesprochen, dass man selbst vom Erreichen der ersten Vertiefung nicht geprägt ist. ",
+  "mn113:21.8": "Denn was man sich auch darüber vorstellt, sie stellt sich als etwas anderes heraus.‘ "
 }
