--- a/translation/de/sabbamitta/sutta/mn/mn113_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/mn/mn113_translation-de-sabbamitta.json
@@ -88,5 +88,6 @@
   "mn113:21.6": "Ein wahrer Mensch denkt: ",
   "mn113:21.7": "‚Der Buddha hat davon gesprochen, dass man selbst vom Erreichen der ersten Vertiefung nicht geprägt ist. ",
   "mn113:21.8": "Denn was man sich auch darüber vorstellt, sie stellt sich als etwas anderes heraus.‘ ",
-  "mn113:21.9": "Und indem er die Tatsache, dass er davon nicht geprägt ist, für sich behält, verherrlicht er sich wegen der ersten Vertiefung nicht selbst oder setzt andere herab. "
+  "mn113:21.9": "Und indem er die Tatsache, dass er davon nicht geprägt ist, für sich behält, verherrlicht er sich wegen der ersten Vertiefung nicht selbst oder setzt andere herab. ",
+  "mn113:21.10": "Auch das ist eine Eigenschaft eines wahren Menschen. "
 }
