Translations by sabbamitta to translation/de/sabbamitta/sutta/mn/mn113_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/mn/mn113_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/mn/mn113_translation-de-sabbamitta.json
@@ -91,5 +91,6 @@
   "mn113:21.9": "Und indem er die Tatsache, dass er davon nicht geprägt ist, für sich behält, verherrlicht er sich wegen der ersten Vertiefung nicht selbst oder setzt andere herab. ",
   "mn113:21.10": "Auch das ist eine Eigenschaft eines wahren Menschen. ",
   "mn113:22-24.1": "Weiterhin tritt da ein unwahrer Mensch, wenn das Ausrichten und Halten des Geistes sich beruhigt, in die zweite Vertiefung ein und verweilt darin … ",
-  "mn113:22-24.2": "in die dritte Vertiefung … "
+  "mn113:22-24.2": "in die dritte Vertiefung … ",
+  "mn113:22-24.3": "in die vierte Vertiefung. "
 }
