--- a/translation/de/sabbamitta/sutta/mn/mn113_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/mn/mn113_translation-de-sabbamitta.json
@@ -93,5 +93,6 @@
   "mn113:22-24.1": "Weiterhin tritt da ein unwahrer Mensch, wenn das Ausrichten und Halten des Geistes sich beruhigt, in die zweite Vertiefung ein und verweilt darin … ",
   "mn113:22-24.2": "in die dritte Vertiefung … ",
   "mn113:22-24.3": "in die vierte Vertiefung. ",
-  "mn113:22-24.4": "Er denkt: "
+  "mn113:22-24.4": "Er denkt: ",
+  "mn113:22-24.5": "‚Ich habe die vierte Vertiefung erreicht, nicht wie diese anderen Mönche und Nonnen.‘ "
 }
