Translations by sabbamitta to translation/de/sabbamitta/sutta/mn/mn113_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/mn/mn113_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/mn/mn113_translation-de-sabbamitta.json
@@ -94,5 +94,6 @@
   "mn113:22-24.2": "in die dritte Vertiefung … ",
   "mn113:22-24.3": "in die vierte Vertiefung. ",
   "mn113:22-24.4": "Er denkt: ",
-  "mn113:22-24.5": "‚Ich habe die vierte Vertiefung erreicht, nicht wie diese anderen Mönche und Nonnen.‘ "
+  "mn113:22-24.5": "‚Ich habe die vierte Vertiefung erreicht, nicht wie diese anderen Mönche und Nonnen.‘ ",
+  "mn113:22-24.6": "Und er verherrlicht sich deshalb selbst und setzt andere herab. "
 }
