Translations by sabbamitta to translation/de/sabbamitta/sutta/mn/mn113_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/mn/mn113_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/mn/mn113_translation-de-sabbamitta.json
@@ -97,5 +97,6 @@
   "mn113:22-24.5": "‚Ich habe die vierte Vertiefung erreicht, nicht wie diese anderen Mönche und Nonnen.‘ ",
   "mn113:22-24.6": "Und er verherrlicht sich deshalb selbst und setzt andere herab. ",
   "mn113:22-24.7": "Auch das ist eine Eigenschaft eines unwahren Menschen. ",
-  "mn113:22-24.8": "Ein wahrer Mensch denkt: "
+  "mn113:22-24.8": "Ein wahrer Mensch denkt: ",
+  "mn113:22-24.9": "‚Der Buddha hat davon gesprochen, dass man selbst vom Erreichen der vierten Vertiefung nicht geprägt ist. "
 }
