--- a/translation/de/sabbamitta/sutta/mn/mn113_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/mn/mn113_translation-de-sabbamitta.json
@@ -98,5 +98,6 @@
   "mn113:22-24.6": "Und er verherrlicht sich deshalb selbst und setzt andere herab. ",
   "mn113:22-24.7": "Auch das ist eine Eigenschaft eines unwahren Menschen. ",
   "mn113:22-24.8": "Ein wahrer Mensch denkt: ",
-  "mn113:22-24.9": "‚Der Buddha hat davon gesprochen, dass man selbst vom Erreichen der vierten Vertiefung nicht geprägt ist. "
+  "mn113:22-24.9": "‚Der Buddha hat davon gesprochen, dass man selbst vom Erreichen der vierten Vertiefung nicht geprägt ist. ",
+  "mn113:22-24.10": "Denn was man sich auch darüber vorstellt, sie stellt sich als etwas anderes heraus.‘ "
 }
