--- a/translation/de/sabbamitta/sutta/mn/mn113_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/mn/mn113_translation-de-sabbamitta.json
@@ -100,5 +100,6 @@
   "mn113:22-24.8": "Ein wahrer Mensch denkt: ",
   "mn113:22-24.9": "‚Der Buddha hat davon gesprochen, dass man selbst vom Erreichen der vierten Vertiefung nicht geprägt ist. ",
   "mn113:22-24.10": "Denn was man sich auch darüber vorstellt, sie stellt sich als etwas anderes heraus.‘ ",
-  "mn113:22-24.11": "Und indem er die Tatsache, dass er davon nicht geprägt ist, für sich behält, verherrlicht er sich wegen der vierten Vertiefung nicht selbst oder setzt andere herab. "
+  "mn113:22-24.11": "Und indem er die Tatsache, dass er davon nicht geprägt ist, für sich behält, verherrlicht er sich wegen der vierten Vertiefung nicht selbst oder setzt andere herab. ",
+  "mn113:22-24.12": "Auch das ist eine Eigenschaft eines wahren Menschen. "
 }
