--- a/translation/de/sabbamitta/sutta/mn/mn113_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/mn/mn113_translation-de-sabbamitta.json
@@ -103,5 +103,6 @@
   "mn113:22-24.11": "Und indem er die Tatsache, dass er davon nicht geprägt ist, für sich behält, verherrlicht er sich wegen der vierten Vertiefung nicht selbst oder setzt andere herab. ",
   "mn113:22-24.12": "Auch das ist eine Eigenschaft eines wahren Menschen. ",
   "mn113:25.1": "Weiterhin übersteigt da ein unwahrer Mensch jegliche Formwahrnehmung, beendet die Wahrnehmung von Eindrücken, richtet den Geist nicht auf die Wahrnehmung von Vielfalt, tritt im Wissen: ‚Raum ist unendlich‘ in die Dimension des unendlichen Raumes ein und verweilt darin. … ",
-  "mn113:26.1": "Er tritt in die Dimension des unendlichen Bewusstseins ein und verweilt darin … "
+  "mn113:26.1": "Er tritt in die Dimension des unendlichen Bewusstseins ein und verweilt darin … ",
+  "mn113:27.1": "in die Dimension des Nichts … "
 }
