Translations by sabbamitta to translation/de/sabbamitta/sutta/mn/mn113_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/mn/mn113_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/mn/mn113_translation-de-sabbamitta.json
@@ -104,5 +104,6 @@
   "mn113:22-24.12": "Auch das ist eine Eigenschaft eines wahren Menschen. ",
   "mn113:25.1": "Weiterhin übersteigt da ein unwahrer Mensch jegliche Formwahrnehmung, beendet die Wahrnehmung von Eindrücken, richtet den Geist nicht auf die Wahrnehmung von Vielfalt, tritt im Wissen: ‚Raum ist unendlich‘ in die Dimension des unendlichen Raumes ein und verweilt darin. … ",
   "mn113:26.1": "Er tritt in die Dimension des unendlichen Bewusstseins ein und verweilt darin … ",
-  "mn113:27.1": "in die Dimension des Nichts … "
+  "mn113:27.1": "in die Dimension des Nichts … ",
+  "mn113:28.1": "in die Dimension, die weder Wahrnehmung noch keine Wahrnehmung hat. "
 }
