--- a/translation/de/sabbamitta/sutta/mn/mn113_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/mn/mn113_translation-de-sabbamitta.json
@@ -106,5 +106,6 @@
   "mn113:26.1": "Er tritt in die Dimension des unendlichen Bewusstseins ein und verweilt darin … ",
   "mn113:27.1": "in die Dimension des Nichts … ",
   "mn113:28.1": "in die Dimension, die weder Wahrnehmung noch keine Wahrnehmung hat. ",
-  "mn113:28.2": "Er denkt: "
+  "mn113:28.2": "Er denkt: ",
+  "mn113:28.3": "‚Ich habe die Dimension erreicht, die weder Wahrnehmung noch keine Wahrnehmung hat, nicht wie diese anderen Mönche und Nonnen.‘ "
 }
