Translations by sabbamitta to translation/de/sabbamitta/sutta/mn/mn113_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/mn/mn113_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/mn/mn113_translation-de-sabbamitta.json
@@ -109,5 +109,6 @@
   "mn113:28.2": "Er denkt: ",
   "mn113:28.3": "‚Ich habe die Dimension erreicht, die weder Wahrnehmung noch keine Wahrnehmung hat, nicht wie diese anderen Mönche und Nonnen.‘ ",
   "mn113:28.4": "Und er verherrlicht sich deshalb selbst und setzt andere herab. ",
-  "mn113:28.5": "Auch das ist eine Eigenschaft eines unwahren Menschen. "
+  "mn113:28.5": "Auch das ist eine Eigenschaft eines unwahren Menschen. ",
+  "mn113:28.6": "Ein wahrer Mensch denkt: "
 }
