--- a/translation/de/sabbamitta/sutta/mn/mn113_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/mn/mn113_translation-de-sabbamitta.json
@@ -111,5 +111,6 @@
   "mn113:28.4": "Und er verherrlicht sich deshalb selbst und setzt andere herab. ",
   "mn113:28.5": "Auch das ist eine Eigenschaft eines unwahren Menschen. ",
   "mn113:28.6": "Ein wahrer Mensch denkt: ",
-  "mn113:28.7": "‚Der Buddha hat davon gesprochen, dass man selbst vom Erreichen der Dimension, die weder Wahrnehmung noch keine Wahrnehmung hat, nicht geprägt ist. "
+  "mn113:28.7": "‚Der Buddha hat davon gesprochen, dass man selbst vom Erreichen der Dimension, die weder Wahrnehmung noch keine Wahrnehmung hat, nicht geprägt ist. ",
+  "mn113:28.8": "Denn was man sich auch darüber vorstellt, sie stellt sich als etwas anderes heraus.‘ "
 }
