--- a/translation/de/sabbamitta/sutta/mn/mn113_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/mn/mn113_translation-de-sabbamitta.json
@@ -114,5 +114,6 @@
   "mn113:28.7": "‚Der Buddha hat davon gesprochen, dass man selbst vom Erreichen der Dimension, die weder Wahrnehmung noch keine Wahrnehmung hat, nicht geprägt ist. ",
   "mn113:28.8": "Denn was man sich auch darüber vorstellt, sie stellt sich als etwas anderes heraus.‘ ",
   "mn113:28.9": "Und indem er die Tatsache, dass er davon nicht geprägt ist, für sich behält, verherrlicht er sich wegen der Dimension, die weder Wahrnehmung noch keine Wahrnehmung hat, nicht selbst oder setzt andere herab. ",
-  "mn113:28.10": "Auch das ist eine Eigenschaft eines wahren Menschen. "
+  "mn113:28.10": "Auch das ist eine Eigenschaft eines wahren Menschen. ",
+  "mn113:29.1": "Weiterhin übersteigt da ein wahrer Mensch vollständig die Dimension, die weder Wahrnehmung noch keine Wahrnehmung hat, tritt in das Aufhören von Wahrnehmung und Gefühl ein und verweilt darin. Und wenn er mit Weisheit sieht, werden seine Befleckungen aufgelöst. "
 }
