Translations by sabbamitta to translation/de/sabbamitta/sutta/mn/mn113_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/mn/mn113_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/mn/mn113_translation-de-sabbamitta.json
@@ -117,5 +117,6 @@
   "mn113:28.10": "Auch das ist eine Eigenschaft eines wahren Menschen. ",
   "mn113:29.1": "Weiterhin übersteigt da ein wahrer Mensch vollständig die Dimension, die weder Wahrnehmung noch keine Wahrnehmung hat, tritt in das Aufhören von Wahrnehmung und Gefühl ein und verweilt darin. Und wenn er mit Weisheit sieht, werden seine Befleckungen aufgelöst. ",
   "mn113:29.2": "Das ist ein Mönch, der sich nichts vorstellt, der sich nichts in Bezug auf etwas vorstellt, der sich nichts durch etwas vorstellt.“ ",
-  "mn113:29.3": "Das sagte der Buddha. "
+  "mn113:29.3": "Das sagte der Buddha. ",
+  "mn113:29.4": "Zufrieden begrüßten die Mönche und Nonnen die Worte des Buddha. "
 }
