Translations by sabbamitta to translation/de/sabbamitta/sutta/mn/mn113_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/mn/mn113_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/mn/mn113_translation-de-sabbamitta.json
@@ -42,7 +42,7 @@
   "mn113:7.4": "Und er verherrlicht sich deshalb selbst und setzt andere herab. ",
   "mn113:7.5": "Auch das ist eine Eigenschaft eines unwahren Menschen. ",
   "mn113:7.6": "Ein wahrer Mensch denkt: ",
-  "mn113:7.7": "‚Nicht weil man namhaft und berühmt ist, gehen Gedanken voller Gier, Hass und Täuschung zu Ende. ",
+  "mn113:7.7": "‚Nicht, weil man namhaft und berühmt ist, gehen Gedanken voller Gier, Hass und Täuschung zu Ende. ",
   "mn113:7.8": "Selbst wenn jemand nicht namhaft und berühmt ist, ",
   "mn113:7.9": "gebührt ihm, wenn er im Einklang mit der Lehre übt, wenn er übt, indem er diesem Vorgehen richtig folgt, und wenn er im Einklang mit dieser Lehre lebt, dafür Ehre und Lob.‘ ",
   "mn113:7.10": "Und indem er die Übung für sich behält, verherrlicht er sich wegen seines Ruhms nicht selbst oder setzt andere herab. ",
