Translations by sabbamitta to translation/de/sabbamitta/sutta/mn/mn113_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/mn/mn113_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/mn/mn113_translation-de-sabbamitta.json
@@ -23,7 +23,7 @@
   "mn113:3.10": "gebührt ihm, wenn er im Einklang mit der Lehre übt, wenn er übt, indem er diesem Vorgehen richtig folgt, und wenn er im Einklang mit dieser Lehre lebt, dafür Ehre und Lob.‘ ",
   "mn113:3.11": "Und indem er die Übung für sich behält, verherrlicht er sich wegen seiner bedeutenden Familie nicht selbst oder setzt andere herab. ",
   "mn113:3.12": "Das ist eine Eigenschaft eines wahren Menschen. ",
-  "mn113:4-6.1": "Weiterhin ist da ein unwahrer Mensch von einer von einer großen Familie fortgezogen … ",
+  "mn113:4-6.1": "Weiterhin ist da ein unwahrer Mensch von einer großen Familie fortgezogen … ",
   "mn113:4-6.2": "von einer wohlhabenden Familie fortgezogen … ",
   "mn113:4-6.3": "von einer äußerst reichen Familie fortgezogen. ",
   "mn113:4-6.4": "Er denkt: ",
