--- a/translation/en/sujato/sutta/an/an3/an3.93_translation-en-sujato.json
+++ b/translation/en/sujato/sutta/an/an3/an3.93_translation-en-sujato.json
@@ -21,7 +21,7 @@
   "an3.93:5.6": "When a mendicant has these three kinds of seclusion, ",
   "an3.93:5.7": "",
   "an3.93:5.8": "",
-  "an3.93:5.9": "they’re called a mendicant who has reached the peak and the pith, being pure and consolidated in the heartwood. ",
+  "an3.93:5.9": "they’re called a mendicant who has reached the peak and the pith, being pure and consolidated in the core. ",
   "an3.93:6.1": "When a farmer’s rice field is ripe, ",
   "an3.93:6.2": "they’d have the rice cut swiftly, ",
   "an3.93:6.3": "gathered swiftly, ",
