--- a/translation/it/soma/sutta/sn/sn22/sn22.89_translation-it-soma.json
+++ b/translation/it/soma/sutta/sn/sn22/sn22.89_translation-it-soma.json
@@ -4,5 +4,6 @@
   "sn22.89:1.3": "Molti cercatori anziani nel tardo pomeriggio, emersi/usciti dalla solitudine/isolamento, dissero al Venerabile Dāsaka: ",
   "sn22.89:1.4": "Vieni, amico Dāsaka, vai dal cercatore Khemako e digli: ",
   "sn22.89:1.5": "‘Gli anziani, amico Khemako, hanno detto questo: ",
-  "sn22.89:1.6": "Speriamo sia tollerabile, sia sopportabile per te, amico, speriamo che le sensazioni spiacevoli vadano via e non aumentino, e che si manifesti il loro andare via e non l’aumentare. "
+  "sn22.89:1.6": "Speriamo sia tollerabile, sia sopportabile per te, amico, speriamo che le sensazioni spiacevoli vadano via e non aumentino, e che si manifesti il loro andare via e non l’aumentare. ",
+  "sn22.89:1.7": "“Si, amico,” annuì il Venerabile Dāsaka ai cercatori anziani e giunto dal Venerabile Khemako, disse: "
 }
