--- a/translation/de/site/name/sutta/an-name_translation-de-site.json
+++ b/translation/de/site/name/sutta/an-name_translation-de-site.json
@@ -774,7 +774,7 @@
   "an-name:773.an5.164": "Gemeinsame Lebensweise ",
   "an-name:774.an5.165": "Fragen stellen ",
   "an-name:775.an5.166": "Aufhören ",
-  "an-name:776.an5.167": "Anklage ",
+  "an-name:776.an5.167": " Anklage ",
   "an-name:777.an5.168": "Sittliches Verhalten  ",
   "an-name:778.an5.169": "Von flinkem Verstand ",
   "an-name:779.an5.170": "Mit Bhaddaji ",
@@ -1520,7 +1520,7 @@
   "an-name:1519.an10.145": "Der edle Pfad ",
   "an-name:1520.an10.146": "Der dunkle Pfad ",
   "an-name:1521.an10.147": "Die wahre Lehre ",
-  "an-name:1522.an10.148": "Die Lehre der wahren Menschen ",
+  "an-name:1522.an10.148": "Die Lehre eines wahren Menschen ",
   "an-name:1523.an10.149": "Sollte aktiviert werden ",
   "an-name:1524.an10.150": "Sollte gepflegt werden ",
   "an-name:1525.an10.151": "Sollte entwickelt werden ",
@@ -1559,7 +1559,7 @@
   "an-name:1558.an10.189": "Der edle Pfad ",
   "an-name:1559.an10.190": "Der dunkle Pfad ",
   "an-name:1560.an10.191": "Die wahre Lehre ",
-  "an-name:1561.an10.192": "Die Lehre der wahren Menschen ",
+  "an-name:1561.an10.192": "Die Lehre eines wahren Menschen ",
   "an-name:1562.an10.193": "Der Grundsatz, der aktiviert werden sollte ",
   "an-name:1563.an10.194": "Der Grundsatz, der gepflegt werden sollte ",
   "an-name:1564.an10.195": "Der Grundsatz, der entwickelt werden sollte ",
