Translations by sujato to translation/en/sujato/sutta/an/an3/an3.34_translation-en-sujato.json

--- a/translation/en/sujato/sutta/an/an3/an3.34_translation-en-sujato.json
+++ b/translation/en/sujato/sutta/an/an3/an3.34_translation-en-sujato.json
@@ -17,7 +17,7 @@
   "an3.34:5.4": "In the same way, any deed that emerges from greed—born, sourced, and originated from greed—ripens where that new incarnation is born. ",
   "an3.34:5.5": "And wherever that deed ripens, its result is experienced—either in the present life, or in the next life, or in some subsequent period. ",
   "an3.34:6.1": "Any deed that emerges from hate … ",
-  "an3.34:6.2": "Any deed that emerges from delusion—born, sourced, and originated from delusion—ripens where that new life-form is born. ",
+  "an3.34:6.2": "Any deed that emerges from delusion—born, sourced, and originated from delusion—ripens where that new incarnation is born. ",
   "an3.34:6.3": "And wherever that deed ripens, its result is experienced—either in the present life, or in the next life, or in some subsequent period. ",
   "an3.34:6.4": "These are three sources that give rise to deeds. ",
   "an3.34:7.1": "Mendicants, there are these three sources that give rise to deeds. ",
