Translations by sujato to translation/en/sujato/sutta/an/an3/an3.34_translation-en-sujato.json

--- a/translation/en/sujato/sutta/an/an3/an3.34_translation-en-sujato.json
+++ b/translation/en/sujato/sutta/an/an3/an3.34_translation-en-sujato.json
@@ -9,7 +9,7 @@
   "an3.34:2.2": "And wherever that deed ripens, its result is experienced—either in the present life, or in the next life, or in some subsequent period. ",
   "an3.34:3.1": "Any deed that emerges from hate—born, sourced, and originated from hate—ripens where that new incarnation is born. ",
   "an3.34:3.2": "And wherever that deed ripens, its result is experienced—either in the present life, or in the next life, or in some subsequent period. ",
-  "an3.34:4.1": "Any deed that emerges from delusion—born, sourced, and originated from delusion—ripens where that new life-form is born. ",
+  "an3.34:4.1": "Any deed that emerges from delusion—born, sourced, and originated from delusion—ripens where that new incarnation is born. ",
   "an3.34:4.2": "And wherever that deed ripens, its result is experienced—either in the present life, or in the next life, or in some subsequent period. ",
   "an3.34:5.1": "Suppose some seeds were intact, unspoiled, not weather-damaged, fertile, and well-kept. They’re sown in a well-prepared, productive field, ",
   "an3.34:5.2": "and the heavens provide plenty of rain. ",
