--- a/translation/en/sujato/sutta/an/an3/an3.34_translation-en-sujato.json
+++ b/translation/en/sujato/sutta/an/an3/an3.34_translation-en-sujato.json
@@ -5,7 +5,7 @@
   "an3.34:1.1": "“Mendicants, there are these three sources that give rise to deeds. ",
   "an3.34:1.2": "What three? ",
   "an3.34:1.3": "Greed, hate, and delusion are sources that give rise to deeds. ",
-  "an3.34:2.1": "Any deed that emerges from greed—born, sourced, and originated from greed—ripens where that new life-form is born. ",
+  "an3.34:2.1": "Any deed that emerges from greed—born, sourced, and originated from greed—ripens where that new incarnation is born. ",
   "an3.34:2.2": "And wherever that deed ripens, its result is experienced—either in the present life, or in the next life, or in some subsequent period. ",
   "an3.34:3.1": "Any deed that emerges from hate—born, sourced, and originated from hate—ripens where that new incarnation is born. ",
   "an3.34:3.2": "And wherever that deed ripens, its result is experienced—either in the present life, or in the next life, or in some subsequent period. ",
