Translations by sujato to translation/en/sujato/sutta/an/an4/an4.15_translation-en-sujato.json

--- a/translation/en/sujato/sutta/an/an4/an4.15_translation-en-sujato.json
+++ b/translation/en/sujato/sutta/an/an4/an4.15_translation-en-sujato.json
@@ -12,7 +12,7 @@
   "an4.15:1.8": "Māra the Wicked. ",
   "an4.15:1.9": "In this world—with its gods, Māras and Brahmās, this population with its ascetics and brahmins, gods and humans—a Realized One, the perfected one, the fully awakened Buddha is said to be the best. ",
   "an4.15:1.10": "These are the four regarded as foremost. ",
-  "an4.15:2.1": "Rāhu is foremost in size of life-form, ",
+  "an4.15:2.1": "Rāhu is foremost in size of incarnation, ",
   "an4.15:2.2": "Mandhātā in enjoying sensual pleasures, ",
   "an4.15:2.3": "Māra in sovereignty, ",
   "an4.15:2.4": "shining with power and glory. ",
