--- a/translation/en/sujato/sutta/an/an4/an4.15_translation-en-sujato.json
+++ b/translation/en/sujato/sutta/an/an4/an4.15_translation-en-sujato.json
@@ -4,7 +4,7 @@
   "an4.15:0.3": "Regarded as Foremost ",
   "an4.15:1.1": "“Mendicants, these four are regarded as foremost. ",
   "an4.15:1.2": "What four? ",
-  "an4.15:1.3": "The foremost in size of life-form is ",
+  "an4.15:1.3": "The foremost in size of incarnation is ",
   "an4.15:1.4": "Rāhu, lord of titans. ",
   "an4.15:1.5": "The foremost pleasure seeker is ",
   "an4.15:1.6": "King Mandhātā. ",
