Translations by sujato to translation/en/sujato/sutta/an/an6/an6.63_translation-en-sujato.json

--- a/translation/en/sujato/sutta/an/an6/an6.63_translation-en-sujato.json
+++ b/translation/en/sujato/sutta/an/an6/an6.63_translation-en-sujato.json
@@ -90,7 +90,7 @@
   "an6.63:29.2": "There are defilements that lead to rebirth in hell, the animal realm, the ghost realm, the human world, and the world of the gods. ",
   "an6.63:29.3": "This is called the diversity of defilements. ",
   "an6.63:30.1": "And what is the result of defilements? ",
-  "an6.63:30.2": "When one who is ignorant creates a corresponding life-form, with the attributes of either good or bad deeds—this is called the result of defilements. ",
+  "an6.63:30.2": "When one who is ignorant creates a corresponding incarnation, with the attributes of either good or bad deeds—this is called the result of defilements. ",
   "an6.63:31.1": "And what is the cessation of defilements? ",
   "an6.63:31.2": "When ignorance ceases, defilements cease. ",
   "an6.63:31.3": "The practice that leads to the cessation of defilements is simply this noble eightfold path, that is: ",
