--- a/translation/en/sujato/sutta/an/an6/an6.63_translation-en-sujato.json
+++ b/translation/en/sujato/sutta/an/an6/an6.63_translation-en-sujato.json
@@ -51,7 +51,7 @@
   "an6.63:17.2": "There are pleasant feelings of the flesh, pleasant feelings not of the flesh, painful feelings of the flesh, painful feelings not of the flesh, neutral feelings of the flesh, and neutral feelings not of the flesh. ",
   "an6.63:17.3": "This is called the diversity of feelings. ",
   "an6.63:18.1": "And what is the result of feelings? ",
-  "an6.63:18.2": "When one who feels creates a corresponding life-form, with the attributes of either good or bad deeds—",
+  "an6.63:18.2": "When one who feels creates a corresponding incarnation, with the attributes of either good or bad deeds—",
   "an6.63:18.3": "this is called the result of feelings. ",
   "an6.63:19.1": "And what is the cessation of feelings? ",
   "an6.63:19.2": "When contact ceases, feelings cease. ",
