Translations by sujato to translation/en/sujato/sutta/an/an6/an6.63_translation-en-sujato.json

--- a/translation/en/sujato/sutta/an/an6/an6.63_translation-en-sujato.json
+++ b/translation/en/sujato/sutta/an/an6/an6.63_translation-en-sujato.json
@@ -33,7 +33,7 @@
   "an6.63:11.2": "The sensual desire for sights, sounds, smells, tastes, and touches are all different. ",
   "an6.63:11.3": "This is called the diversity of sensual pleasures. ",
   "an6.63:12.1": "And what is the result of sensual pleasures? ",
-  "an6.63:12.2": "When one who desires sensual pleasures creates a corresponding life-form, with the attributes of either good or bad deeds—this is called the result of sensual pleasures. ",
+  "an6.63:12.2": "When one who desires sensual pleasures creates a corresponding incarnation, with the attributes of either good or bad deeds—this is called the result of sensual pleasures. ",
   "an6.63:13.1": "And what is the cessation of sensual pleasures? ",
   "an6.63:13.2": "When contact ceases, sensual pleasures cease. ",
   "an6.63:13.3": "The practice that leads to the cessation of sensual pleasures is simply this noble eightfold path, that is: ",
