Translations by sujato to translation/en/sujato/sutta/mn/mn79_translation-en-sujato.json

--- a/translation/en/sujato/sutta/mn/mn79_translation-en-sujato.json
+++ b/translation/en/sujato/sutta/mn/mn79_translation-en-sujato.json
@@ -194,7 +194,7 @@
   "mn79:46.1": "When he said this, Sakuludāyī’s assembly said to him, ",
   "mn79:46.2": "“Master Udāyī, don’t lead the spiritual life under the ascetic Gotama. ",
   "mn79:46.3": "You have been a teacher; don’t live as a student. ",
-  "mn79:46.4": "The consequence for you will be as if a water jar were to become a water jug. ",
+  "mn79:46.4": "The consequence for you will be as if a water jar were to become a water ladle. ",
   "mn79:46.5": "Master Udāyī, don’t lead the spiritual life under the ascetic Gotama. ",
   "mn79:46.6": "You have been a teacher; don’t live as a student.” ",
   "mn79:46.7": "And that’s how the wanderer Sakuludāyī’s own assembly prevented him from leading the spiritual life under the Buddha. "
