Translations by brahmali to translation/en/brahmali/vinaya/pli-tv-bu-vb/pli-tv-bu-vb-pj/pli-tv-bu-vb-pj1_translation-en-brahmali.json

--- a/translation/en/brahmali/vinaya/pli-tv-bu-vb/pli-tv-bu-vb-pj/pli-tv-bu-vb-pj1_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-bu-vb/pli-tv-bu-vb-pj/pli-tv-bu-vb-pj1_translation-en-brahmali.json
@@ -517,7 +517,7 @@
   "pli-tv-bu-vb-pj1:8.1.13": "a trainee monk; ",
   "pli-tv-bu-vb-pj1:8.1.14": "a fully trained monk; ",
   "pli-tv-bu-vb-pj1:8.1.15": "a monk who has been given the full ordination by a unanimous Sangha through a legal procedure consisting of one motion and three announcements that is irreversible and fit to stand. ",
-  "pli-tv-bu-vb-pj1:8.1.16": "The monk who has been given the full ordination by a unanimous Sangha through a legal procedure consisting of one motion and three announcements, which is irreversible and fit to stand—this sort of monk is meant in this case. ",
+  "pli-tv-bu-vb-pj1:8.1.16": "The monk who has been given the full ordination by a unanimous Sangha through a legal procedure consisting of one motion and three announcements that is irreversible and fit to stand—this sort of monk is meant in this case. ",
   "pli-tv-bu-vb-pj1:8.1.17": "Training: ",
   "pli-tv-bu-vb-pj1:8.1.18": "the three trainings: the training in the higher morality, the training in the higher mind, the training in the higher wisdom. ",
   "pli-tv-bu-vb-pj1:8.1.19": "The training in the higher morality is the training meant in this case. ",
