--- a/translation/en/brahmali/vinaya/pli-tv-bu-vb/pli-tv-bu-vb-pc/pli-tv-bu-vb-pc2_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-bu-vb/pli-tv-bu-vb-pc/pli-tv-bu-vb-pc2_translation-en-brahmali.json
@@ -84,7 +84,7 @@
   "pli-tv-bu-vb-pc2:2.1.29": "Low professions: ",
   "pli-tv-bu-vb-pc2:2.1.30": "reed work, pottery, weaving, leather work, hairdressing, or professions, in whatever countries, that are despised, looked down upon, scorned, treated with contempt, disregarded—these are called “low professions”. ",
   "pli-tv-bu-vb-pc2:2.1.31": "High professions: ",
-  "pli-tv-bu-vb-pc2:2.1.32": "accounting, arithmetic, writing, or professions, in whatever countries, that are highly regarded, highly thought of, respected, valued, esteemed—these are called “high professions”. ",
+  "pli-tv-bu-vb-pc2:2.1.32": "arithmetic, accounting, writing, or professions, in whatever countries, that are highly regarded, highly thought of, respected, valued, esteemed—these are called “high professions”. ",
   "pli-tv-bu-vb-pc2:2.1.33": "Illnesses: ",
   "pli-tv-bu-vb-pc2:2.1.34": "all are low, but there is the illness of diabetes which is high. ",
   "pli-tv-bu-vb-pc2:2.1.35": "Physical traits: ",
