--- a/translation/en/brahmali/vinaya/pli-tv-bu-vb/pli-tv-bu-vb-pc/pli-tv-bu-vb-pc2_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-bu-vb/pli-tv-bu-vb-pc/pli-tv-bu-vb-pc2_translation-en-brahmali.json
@@ -160,7 +160,7 @@
   "pli-tv-bu-vb-pc2:2.3.1": "If one who is fully ordained, wishing to revile, wishing to insult, wishing to humiliate another who is fully ordained, says, “There are outcasts right here,” “There are bamboo workers right here,” “There are hunters right here,” “There are carriage makers right here,” “There are waste removers right here,” then for every statement, he commits an offense of wrong conduct. ",
   "pli-tv-bu-vb-pc2:2.3.2": "If one who is fully ordained, wishing to revile, wishing to insult, wishing to humiliate another who is fully ordained, says, “There are aristocrats right here,” “There are brahmins right here,” then for every statement, he commits an offense of wrong conduct. ",
   "pli-tv-bu-vb-pc2:2.3.3": "If one who is fully ordained, wishing to revile, wishing to insult, wishing to humiliate another who is fully ordained, says, “There are Avakaṇṇakas right here,” “There are Javakaṇṇakas right here,” “There are Dhaniṭṭhakas right here,” “There are Saviṭṭhakas right here,” “There are Kulavaḍḍhakas right here,” … ",
-  "pli-tv-bu-vb-pc2:2.3.4": "… says, “There are Buddharakkhitas right here,” “There are Dhammarakkhitas right here,” “There are Sangharakkhitas right here,” … ",
+  "pli-tv-bu-vb-pc2:2.3.4": "says, “There are Buddharakkhitas right here,” “There are Dhammarakkhitas right here,” “There are Sangharakkhitas right here,” … ",
   "pli-tv-bu-vb-pc2:2.3.5": "… says, “There are Kosiyas right here,” “There are Bhāradvājas right here,” … ",
   "pli-tv-bu-vb-pc2:2.3.6": "… says, “There are Gotamas right here,” “There are Moggallānas right here,” “There are Kaccānas right here,” “There are Vāsiṭṭhas right here,” … ",
   "pli-tv-bu-vb-pc2:2.3.7": "… says, “There are carpenters right here,” “There are waste removers right here,” … ",
