--- a/translation/en/brahmali/vinaya/pli-tv-bu-vb/pli-tv-bu-vb-pc/pli-tv-bu-vb-pc2_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-bu-vb/pli-tv-bu-vb-pc/pli-tv-bu-vb-pc2_translation-en-brahmali.json
@@ -163,7 +163,7 @@
   "pli-tv-bu-vb-pc2:2.3.4": "says, “There are Buddharakkhitas right here,” “There are Dhammarakkhitas right here,” “There are Sangharakkhitas right here,” … ",
   "pli-tv-bu-vb-pc2:2.3.5": "says, “There are Kosiyas right here,” “There are Bhāradvājas right here,” … ",
   "pli-tv-bu-vb-pc2:2.3.6": "says, “There are Gotamas right here,” “There are Moggallānas right here,” “There are Kaccānas right here,” “There are Vāsiṭṭhas right here,” … ",
-  "pli-tv-bu-vb-pc2:2.3.7": "… says, “There are carpenters right here,” “There are waste removers right here,” … ",
+  "pli-tv-bu-vb-pc2:2.3.7": "says, “There are carpenters right here,” “There are waste removers right here,” … ",
   "pli-tv-bu-vb-pc2:2.3.8": "… says, “There are farmers right here,” “There are traders right here,” “There are cattle keepers right here,” … ",
   "pli-tv-bu-vb-pc2:2.3.9": "… says, “There are reed workers right here,” “There are potters right here,” “There are weavers right here,” “There are leather workers right here,” “There are barbers right here,” … ",
   "pli-tv-bu-vb-pc2:2.3.10": "… says, “There are arithmeticians right here,” “There are accountants right here,” “There are clerks right here,” … ",
