Translations by brahmali to translation/en/brahmali/vinaya/pli-tv-bu-vb/pli-tv-bu-vb-pc/pli-tv-bu-vb-pc2_translation-en-brahmali.json

--- a/translation/en/brahmali/vinaya/pli-tv-bu-vb/pli-tv-bu-vb-pc/pli-tv-bu-vb-pc2_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-bu-vb/pli-tv-bu-vb-pc/pli-tv-bu-vb-pc2_translation-en-brahmali.json
@@ -167,7 +167,7 @@
   "pli-tv-bu-vb-pc2:2.3.8": "says, “There are farmers right here,” “There are traders right here,” “There are cattle keepers right here,” … ",
   "pli-tv-bu-vb-pc2:2.3.9": "says, “There are reed workers right here,” “There are potters right here,” “There are weavers right here,” “There are leather workers right here,” “There are barbers right here,” … ",
   "pli-tv-bu-vb-pc2:2.3.10": "says, “There are arithmeticians right here,” “There are accountants right here,” “There are clerks right here,” … ",
-  "pli-tv-bu-vb-pc2:2.3.11": "… says, “There are lepers right here,” “There are some with abscesses right here,” “There are some with mild leprosy right here,” “There are some with tuberculosis right here,” “There are epileptics right here,” … ",
+  "pli-tv-bu-vb-pc2:2.3.11": "says, “There are lepers right here,” “There are some with abscesses right here,” “There are some with mild leprosy right here,” “There are some with tuberculosis right here,” “There are epileptics right here,” … ",
   "pli-tv-bu-vb-pc2:2.3.12": "… says, “There are diabetics right here,” … ",
   "pli-tv-bu-vb-pc2:2.3.13": "… says, “There are some who are too tall right here,” “There are some who are too short right here,” “There are some who are too dark right here,” “There are some who are too fair right here,” … ",
   "pli-tv-bu-vb-pc2:2.3.14": "… says, “There are some who are not too tall right here,” “There are some who are not too short right here,” “There are some who are not too dark right here,” “There are some who are not too fair right here,” … ",
