--- a/translation/en/brahmali/vinaya/pli-tv-bu-vb/pli-tv-bu-vb-pc/pli-tv-bu-vb-pc2_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-bu-vb/pli-tv-bu-vb-pc/pli-tv-bu-vb-pc2_translation-en-brahmali.json
@@ -170,7 +170,7 @@
   "pli-tv-bu-vb-pc2:2.3.11": "says, “There are lepers right here,” “There are some with abscesses right here,” “There are some with mild leprosy right here,” “There are some with tuberculosis right here,” “There are epileptics right here,” … ",
   "pli-tv-bu-vb-pc2:2.3.12": "says, “There are diabetics right here,” … ",
   "pli-tv-bu-vb-pc2:2.3.13": "says, “There are some who are too tall right here,” “There are some who are too short right here,” “There are some who are too dark right here,” “There are some who are too fair right here,” … ",
-  "pli-tv-bu-vb-pc2:2.3.14": "… says, “There are some who are not too tall right here,” “There are some who are not too short right here,” “There are some who are not too dark right here,” “There are some who are not too fair right here,” … ",
+  "pli-tv-bu-vb-pc2:2.3.14": "says, “There are some who are not too tall right here,” “There are some who are not too short right here,” “There are some who are not too dark right here,” “There are some who are not too fair right here,” … ",
   "pli-tv-bu-vb-pc2:2.3.15": "… says, “There are some who are full of sensual desire right here,” “There are some who are full of ill will right here,” “There are some who are full of confusion right here,” … ",
   "pli-tv-bu-vb-pc2:2.3.16": "… says, “There are some without sensual desire right here,” “There are some without ill will right here,” “There are some without confusion right here,” … ",
   "pli-tv-bu-vb-pc2:2.3.17": "… says, “There are some who have committed an offense entailing expulsion right here … etc. … ",
