Translations by brahmali to translation/en/brahmali/vinaya/pli-tv-bu-vb/pli-tv-bu-vb-pc/pli-tv-bu-vb-pc2_translation-en-brahmali.json

--- a/translation/en/brahmali/vinaya/pli-tv-bu-vb/pli-tv-bu-vb-pc/pli-tv-bu-vb-pc2_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-bu-vb/pli-tv-bu-vb-pc/pli-tv-bu-vb-pc2_translation-en-brahmali.json
@@ -173,7 +173,7 @@
   "pli-tv-bu-vb-pc2:2.3.14": "says, “There are some who are not too tall right here,” “There are some who are not too short right here,” “There are some who are not too dark right here,” “There are some who are not too fair right here,” … ",
   "pli-tv-bu-vb-pc2:2.3.15": "says, “There are some who are full of sensual desire right here,” “There are some who are full of ill will right here,” “There are some who are full of confusion right here,” … ",
   "pli-tv-bu-vb-pc2:2.3.16": "says, “There are some without sensual desire right here,” “There are some without ill will right here,” “There are some without confusion right here,” … ",
-  "pli-tv-bu-vb-pc2:2.3.17": "… says, “There are some who have committed an offense entailing expulsion right here … etc. … ",
+  "pli-tv-bu-vb-pc2:2.3.17": "says, “There are some who have committed an offense entailing expulsion right here … etc. … ",
   "pli-tv-bu-vb-pc2:2.3.18": "… some who have committed an offense of wrong speech right here,” … ",
   "pli-tv-bu-vb-pc2:2.3.19": "… says, “There are stream-enterers right here,” … ",
   "pli-tv-bu-vb-pc2:2.3.20": "… says, “There are camels right here,” “There are rams right here,” “There are oxen right here,” “There are donkeys right here,” “There are animals right here,” “There are those bound for hell right here,” “There are those not going to a good destination right here,” “There are those who can only expect a bad destination right here,” then for every statement, he commits an offense of wrong conduct. ",
