Translations by brahmali to translation/en/brahmali/vinaya/pli-tv-bu-vb/pli-tv-bu-vb-pc/pli-tv-bu-vb-pc2_translation-en-brahmali.json

--- a/translation/en/brahmali/vinaya/pli-tv-bu-vb/pli-tv-bu-vb-pc/pli-tv-bu-vb-pc2_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-bu-vb/pli-tv-bu-vb-pc/pli-tv-bu-vb-pc2_translation-en-brahmali.json
@@ -200,7 +200,7 @@
   "pli-tv-bu-vb-pc2:2.7.4": "If one who is fully ordained, not wishing to revile, not wishing to insult, not wishing to humiliate another who is fully ordained, but wanting to have fun, says what is high to one who is high—an aristocrat, a brahmin—saying, “You’re an aristocrat,” “You’re a brahmin,” then for every statement, he commits an offense of wrong speech. ",
   "pli-tv-bu-vb-pc2:2.7.5": "If one who is fully ordained, not wishing to revile, not wishing to insult, not wishing to humiliate another who is fully ordained, but wanting to have fun, says what is low to one who is low … ",
   "pli-tv-bu-vb-pc2:2.7.6": "says what is low to one who is high … ",
-  "pli-tv-bu-vb-pc2:2.7.7": "… says what is high to one who is low … ",
+  "pli-tv-bu-vb-pc2:2.7.7": "says what is high to one who is low … ",
   "pli-tv-bu-vb-pc2:2.7.8": "… says what is high to one who is high—one who is wise, one who is competent, one who is intelligent, one who is learned, one who is an expounder of the Teaching—",
   "pli-tv-bu-vb-pc2:2.7.9": "saying, “You’re wise,” “You’re competent,” “You’re intelligent,” “You’re learned,” “You’re an expounder of the Teaching,” “You’re not going to a bad destination,” “You can only expect a good destination,” then for every statement, he commits an offense of wrong speech. ",
   "pli-tv-bu-vb-pc2:2.7.10.0": "Not intending to abuse, indirect speech ",
