--- a/translation/de/site/name/sutta/mn-name_translation-de-site.json
+++ b/translation/de/site/name/sutta/mn-name_translation-de-site.json
@@ -136,7 +136,7 @@
   "mn-name:135.mn120": "Wiedergeburt aus freier Entscheidung ",
   "mn-name:136.mn-sunnatavagga": "Das Kapitel, das mit der Leerheit beginnt ",
   "mn-name:137.mn121": "Die kürzere Lehrrede von der Leerheit ",
-  "mn-name:138.mn122": "Die längere Lehrrede von der Leerheit ",
+  "mn-name:138.mn122": "Die längere Lehrrede über die Leerheit ",
   "mn-name:139.mn123": "Unglaublich und erstaunlich ",
   "mn-name:140.mn124": "Mit Bakkula ",
   "mn-name:141.mn125": "Der Rang der Gebändigten ",
