Translations by sabbamitta to translation/de/sabbamitta/sutta/mn/mn122_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/mn/mn122_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/mn/mn122_translation-de-sabbamitta.json
@@ -1,3 +1,4 @@
 {
-  "mn122:0.1": "Mittlere Lehrreden 122 "
+  "mn122:0.1": "Mittlere Lehrreden 122 ",
+  "mn122:0.2": "Die längere Lehrrede über die Leerheit "
 }
