--- a/translation/de/sabbamitta/sutta/mn/mn122_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/mn/mn122_translation-de-sabbamitta.json
@@ -1,4 +1,5 @@
 {
   "mn122:0.1": "Mittlere Lehrreden 122 ",
-  "mn122:0.2": "Die längere Lehrrede über die Leerheit "
+  "mn122:0.2": "Die längere Lehrrede über die Leerheit ",
+  "mn122:1.1": "So habe ich es gehört: "
 }
