--- a/translation/de/sabbamitta/sutta/mn/mn122_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/mn/mn122_translation-de-sabbamitta.json
@@ -2,5 +2,6 @@
   "mn122:0.1": "Mittlere Lehrreden 122 ",
   "mn122:0.2": "Die längere Lehrrede über die Leerheit ",
   "mn122:1.1": "So habe ich es gehört: ",
-  "mn122:1.2": "Einmal hielt sich der Buddha im Land der Sakyer bei Kapilavatthu auf, im Banyanbaum-Kloster. "
+  "mn122:1.2": "Einmal hielt sich der Buddha im Land der Sakyer bei Kapilavatthu auf, im Banyanbaum-Kloster. ",
+  "mn122:2.1": "Da kleidete der Buddha sich am Morgen an, nahm Schale und Robe und betrat Kapilavatthu zum Almosengang. "
 }
