--- a/translation/de/sabbamitta/sutta/mn/mn122_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/mn/mn122_translation-de-sabbamitta.json
@@ -5,7 +5,7 @@
   "mn122:1.2": "Einmal hielt sich der Buddha im Land der Sakyer bei Kapilavatthu auf, im Banyanbaum-Kloster. ",
   "mn122:2.1": "Da kleidete der Buddha sich am Morgen an, nahm Schale und Robe und betrat Kapilavatthu zum Almosengang. ",
   "mn122:2.2": "Er zog um Almosen durch Kapilavatthu. Nach dem Essen, als er vom Almosengang zurückkam, ging er zur Wohnung des Sakyers Kāḷakhemaka, um den Tag über dort zu meditieren. ",
-  "mn122:2.3": "Zu dieser Zeit waren in der Wohnung des Sakyers Kāḷakhemaka viele Ruheplätze ausgebreitet. ",
+  "mn122:2.3": "Zu dieser Zeit waren in der Wohnung des Sakyers Kāḷakhemaka viele Ruheplätze ausgebreitet worden. ",
   "mn122:2.4": "Der Buddha sah das ",
   "mn122:2.5": "und dachte: "
 }
